; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/pci/hotplug/extr_pciehp_ctrl.c_queue_interrupt_event.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/pci/hotplug/extr_pciehp_ctrl.c_queue_interrupt_event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.slot = type { i32 }
%struct.event_info = type { i32, %struct.slot*, i32 }

@GFP_ATOMIC = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4
@interrupt_event_handler = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.slot*, i32)* @queue_interrupt_event to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @queue_interrupt_event(%struct.slot* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.slot*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.event_info*, align 8
  store %struct.slot* %0, %struct.slot** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load i32, i32* @GFP_ATOMIC, align 4
  %8 = call %struct.event_info* @kmalloc(i32 24, i32 %7)
  store %struct.event_info* %8, %struct.event_info** %6, align 8
  %9 = load %struct.event_info*, %struct.event_info** %6, align 8
  %10 = icmp ne %struct.event_info* %9, null
  br i1 %10, label %14, label %11

11:                                               ; preds = %2
  %12 = load i32, i32* @ENOMEM, align 4
  %13 = sub nsw i32 0, %12
  store i32 %13, i32* %3, align 4
  br label %28

14:                                               ; preds = %2
  %15 = load i32, i32* %5, align 4
  %16 = load %struct.event_info*, %struct.event_info** %6, align 8
  %17 = getelementptr inbounds %struct.event_info, %struct.event_info* %16, i32 0, i32 2
  store i32 %15, i32* %17, align 8
  %18 = load %struct.slot*, %struct.slot** %4, align 8
  %19 = load %struct.event_info*, %struct.event_info** %6, align 8
  %20 = getelementptr inbounds %struct.event_info, %struct.event_info* %19, i32 0, i32 1
  store %struct.slot* %18, %struct.slot** %20, align 8
  %21 = load %struct.event_info*, %struct.event_info** %6, align 8
  %22 = getelementptr inbounds %struct.event_info, %struct.event_info* %21, i32 0, i32 0
  %23 = load i32, i32* @interrupt_event_handler, align 4
  %24 = call i32 @INIT_WORK(i32* %22, i32 %23)
  %25 = load %struct.event_info*, %struct.event_info** %6, align 8
  %26 = getelementptr inbounds %struct.event_info, %struct.event_info* %25, i32 0, i32 0
  %27 = call i32 @schedule_work(i32* %26)
  store i32 0, i32* %3, align 4
  br label %28

28:                                               ; preds = %14, %11
  %29 = load i32, i32* %3, align 4
  ret i32 %29
}

declare dso_local %struct.event_info* @kmalloc(i32, i32) #1

declare dso_local i32 @INIT_WORK(i32*, i32) #1

declare dso_local i32 @schedule_work(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
